crates/plotnik-tests/tests/04-emit/types/captures/builtin_does_not_legalize_unlabeled_alternation.txt
Q = [
  (identifier) @x :: text
  {
    (identifier) @id
  } @x :: text
]
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Node` and `{ id: Node }` across alternatives
 --> query.ptk:2:16
  |
2 |   (identifier) @x :: text
  |                ^^
...
5 |   } @x :: text
  |     -- `@x` has type `{ id: Node }` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
